# gigaspace-test-task

./: .gitignore  README.md  README.rst  requirements.txt  run_tests.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
etc/gigaspace/: gigaspace.conf  gigaspace.test.conf
gigaspace/cinder_workflow/: base.py
gigaspace/cmd/: common.py  entry_point.py  gigaspace_tool.py  gigaspace_tool_tester.py
gigaspace/common/: cfg.py  context.py  exception.py  remote.py  templating.py  utils.py
gigaspace/nova_workflow/: base.py
gigaspace/templates/: user.data
gigaspace/tests/fakes/: __init__.py  openstack.py
gigaspace/tests/functional/: test_volumes.py  test_workflow.py
