[metadata]
name = gigaspace_test_task
version = 2015
summary = OpenStack BlockStrage usage example
description-file =
    README.md
author = denis_makogon
author-email = lildee1991@gmail.com

classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
     gigaspace

[entry_points]
console_scripts =
    gigatool=gigaspace.cmd.entry_point:main
    gigaspacetool-tester=gigaspace.run_tests:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
